--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,21 @@
 {
-  "extends": "react-app"
+  "extends": "react-app",
+  "rules": {
+    "indent": [
+      "error",
+      "tab"
+    ],
+    "linebreak-style": [
+      "error",
+      "unix"
+    ],
+    "quotes": [
+      "error",
+      "single"
+    ],
+    "semi": [
+      "error",
+      "never"
+    ]
+  }
 }
