--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Forrest Weiswolf <forrest.weiswolf@gmail.com>",
   "private": true,
   "dependencies": {
+    "meristem": "^1.2.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.0.17"
